# RazerSteelseriesWaveEffect2

./: CMakeLists.txt  README.md  VMToggle.sh  build.sh
src/: main.c
src/include/: bytes.h  colour.h  extrasThread.h  globals.h  keyboard.h  keys.h  mouse.h  wave.h
